--- a/Hansen/packages.config
+++ b/Hansen/packages.config
@@ -2,8 +2,12 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="foundation-sites" version="6.2.1" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.Core" version="1.5.0" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.5.0" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.V8" version="1.5.2" targetFramework="net461" />
   <package id="jQuery" version="2.2.0" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
+  <package id="JSPool" version="0.4.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net461" />
@@ -21,7 +25,13 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="MsieJavaScriptEngine" version="1.7.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
+  <package id="React.Core" version="2.3.0" targetFramework="net461" />
+  <package id="React.Web" version="2.3.0" targetFramework="net461" />
+  <package id="React.Web.Mvc4" version="2.3.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="System.Web.Optimization.React" version="2.3.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.1.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
