--- a/Hansen/Web.config
+++ b/Hansen/Web.config
@@ -14,6 +14,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MailgunAPIKey" value="key-c4ab02324a06f7f43d5285d8683acf3a" />
+    <add key="MailgunDomain" value="overengineer.it" />
+    <add key="Sender" value="postmaster@hansenpaintmail.com" />
+    <add key="ConfirmationSubject" value="Thank you for contacting A.L. Hansen Paint &amp; Metal" />
+    <add key="ConfirmationBody" value="Thank you for contacting A.L. Hansen Paint &amp; Metal. We appreciate your business. We have received your inquiry about your {0} {1} {2}. We will be in touch with you very soon!"/>
+    <add key="AlertSubject" value="New inquiry from {0}" />
+    <add key="AlertRecipiant" value="heymrcarter14@gmail.com" />
+    <add key="AlertBody" value="Inquiry details:\nName:{0}\nPhone: {1}\nEmail: {2}\nYear: {3}\nMake: {4}\nModel: {5}\nAdditional comments: {6}"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
