--- a/Hansen/packages.config
+++ b/Hansen/packages.config
@@ -31,6 +31,7 @@
   <package id="React.Web" version="2.3.0" targetFramework="net461" />
   <package id="React.Web.Mvc4" version="2.3.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net461" />
   <package id="System.Web.Optimization.React" version="2.3.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
