--- a/Hansen/packages.config
+++ b/Hansen/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
-  <package id="foundation-sites" version="6.2.1" targetFramework="net461" />
+  <package id="Autofac" version="3.4.0" targetFramework="net461" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net461" />
+  <package id="Foundation5.Core" version="5.5" targetFramework="net461" />
+  <package id="Foundation5.MVC" version="2.0.550" targetFramework="net461" />
   <package id="JavaScriptEngineSwitcher.Core" version="1.5.0" targetFramework="net461" />
   <package id="JavaScriptEngineSwitcher.Msie" version="1.5.0" targetFramework="net461" />
   <package id="JavaScriptEngineSwitcher.V8" version="1.5.2" targetFramework="net461" />
