adds contact form. updates services bg. adds about images

--- a/Hansen/Web.Debug.config
+++ b/Hansen/Web.Debug.config
@@ -27,4 +27,7 @@
       </customErrors>
     -->
   </system.web>
+  <appSettings>
+    <add xdt:Transform="Replace" key="MailgunDebugMode" value="true" />
+  </appSettings>
 </configuration>
