updates AlertRecipient config to production value

--- a/Hansen/Web.Debug.config
+++ b/Hansen/Web.Debug.config
@@ -29,5 +29,6 @@
   </system.web>
   <appSettings>
     <add xdt:Transform="Replace" key="MailgunDebugMode" value="true" />
+    <add xdt:Transform="Replace" key="AlertRecipient" value="heymrcarter14@gmail.com"/>
   </appSettings>
 </configuration>
