--- a/Hansen/Web.config
+++ b/Hansen/Web.config
@@ -20,7 +20,7 @@
     <add key="ConfirmationSubject" value="Thank you for contacting A.L. Hansen Paint &amp; Metal" />
     <add key="ConfirmationBody" value="Thank you for contacting A.L. Hansen Paint &amp; Metal. We appreciate your business. We have received your inquiry about your {0} {1} {2}. We will be in touch with you very soon!" />
     <add key="AlertSubject" value="New inquiry from {0}" />
-    <add key="AlertRecipiant" value="heymrcarter14@gmail.com" />
+    <add key="AlertRecipiant" value="hansenpaintmetal@aol.com" />
     <add key="AlertBody" value="Inquiry details:\nName:{0}\nPhone: {1}\nEmail: {2}\nYear: {3}\nMake: {4}\nModel: {5}\nAdditional comments: {6}" />
     <add key="MailgunDebugMode" value="false" />
     <add key="GalleryThumbnailDirectory" value="~/Content/images/gallery/thumbnails/" />
