--- a/Hansen/Hansen.csproj
+++ b/Hansen/Hansen.csproj
@@ -212,6 +212,7 @@
     <Content Include="Scripts\components\Map.jsx" />
     <Content Include="Scripts\components\ContactForm.jsx" />
     <Content Include="App_Readme\Foundation for sites\readme.md" />
+    <None Include="Properties\PublishProfiles\hansen-preview - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\build\build.js" />
     <Content Include="Scripts\foundation\fastclick.js" />
