gets react from cdn

--- a/Hansen/Hansen.csproj
+++ b/Hansen/Hansen.csproj
@@ -200,10 +200,115 @@
     <Content Include="Content\foundation\foundation.mvc.css" />
     <Content Include="Content\foundation\normalize.css" />
     <Content Include="Content\images\52-hansen-truck.jpg" />
+    <Content Include="Content\images\gallery\full\1.jpg" />
+    <Content Include="Content\images\gallery\full\10.jpg" />
+    <Content Include="Content\images\gallery\full\11.jpg" />
+    <Content Include="Content\images\gallery\full\12.jpg" />
+    <Content Include="Content\images\gallery\full\13.jpg" />
+    <Content Include="Content\images\gallery\full\14.jpg" />
+    <Content Include="Content\images\gallery\full\15.jpg" />
+    <Content Include="Content\images\gallery\full\16.jpg" />
+    <Content Include="Content\images\gallery\full\17.jpg" />
+    <Content Include="Content\images\gallery\full\18.jpg" />
+    <Content Include="Content\images\gallery\full\19.jpg" />
+    <Content Include="Content\images\gallery\full\2.jpg" />
+    <Content Include="Content\images\gallery\full\20.jpg" />
+    <Content Include="Content\images\gallery\full\21.jpg" />
+    <Content Include="Content\images\gallery\full\22.jpg" />
+    <Content Include="Content\images\gallery\full\23.jpg" />
+    <Content Include="Content\images\gallery\full\24.jpg" />
+    <Content Include="Content\images\gallery\full\25.jpg" />
+    <Content Include="Content\images\gallery\full\26.jpg" />
+    <Content Include="Content\images\gallery\full\27.jpg" />
+    <Content Include="Content\images\gallery\full\28.jpg" />
+    <Content Include="Content\images\gallery\full\29.jpg" />
+    <Content Include="Content\images\gallery\full\3.jpg" />
+    <Content Include="Content\images\gallery\full\30.jpg" />
+    <Content Include="Content\images\gallery\full\31.jpg" />
+    <Content Include="Content\images\gallery\full\32.jpg" />
+    <Content Include="Content\images\gallery\full\33.jpg" />
+    <Content Include="Content\images\gallery\full\34.jpg" />
+    <Content Include="Content\images\gallery\full\35.jpg" />
+    <Content Include="Content\images\gallery\full\36.jpg" />
+    <Content Include="Content\images\gallery\full\37.jpg" />
+    <Content Include="Content\images\gallery\full\38.jpg" />
+    <Content Include="Content\images\gallery\full\39.jpg" />
+    <Content Include="Content\images\gallery\full\4.jpg" />
+    <Content Include="Content\images\gallery\full\40.jpg" />
+    <Content Include="Content\images\gallery\full\41.jpg" />
+    <Content Include="Content\images\gallery\full\42.jpg" />
+    <Content Include="Content\images\gallery\full\43.jpg" />
+    <Content Include="Content\images\gallery\full\44.jpg" />
+    <Content Include="Content\images\gallery\full\45.jpg" />
+    <Content Include="Content\images\gallery\full\46.jpg" />
+    <Content Include="Content\images\gallery\full\47.jpg" />
+    <Content Include="Content\images\gallery\full\48.jpg" />
+    <Content Include="Content\images\gallery\full\49.jpg" />
+    <Content Include="Content\images\gallery\full\5.jpg" />
+    <Content Include="Content\images\gallery\full\50.jpg" />
+    <Content Include="Content\images\gallery\full\51.jpg" />
+    <Content Include="Content\images\gallery\full\52.jpg" />
+    <Content Include="Content\images\gallery\full\6.jpg" />
+    <Content Include="Content\images\gallery\full\7.jpg" />
+    <Content Include="Content\images\gallery\full\8.jpg" />
+    <Content Include="Content\images\gallery\full\9.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\1.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\10.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\11.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\12.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\13.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\14.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\15.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\16.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\17.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\18.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\19.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\2.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\20.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\21.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\22.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\23.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\24.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\25.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\26.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\27.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\28.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\29.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\3.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\30.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\31.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\32.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\33.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\34.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\35.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\36.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\37.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\38.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\39.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\4.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\40.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\41.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\42.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\43.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\44.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\45.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\46.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\47.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\48.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\49.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\5.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\50.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\51.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\52.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\6.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\7.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\8.jpg" />
+    <Content Include="Content\images\gallery\thumbnails\9.jpg" />
     <Content Include="Content\images\hansen-logo.png" />
     <Content Include="Content\images\hansen-sign.jpg" />
     <Content Include="Content\images\services-large.jpg" />
     <Content Include="Content\images\services-medium.jpg" />
+    <Content Include="Content\images\services-wide.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
